--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,32 @@
-aniso8601==9.0.1
-bcrypt==4.0.1
-blinker==1.6.2
-certifi==2023.5.7
-charset-normalizer==3.1.0
-click==8.1.3
-configparser==5.3.0
-Flask==2.3.2
-Flask-Bcrypt==1.0.1
-Flask-Cors==3.0.10
-Flask-JWT-Extended==4.5.2
-Flask-Login==0.6.2
-Flask-RESTful==0.3.10
-Flask-SQLAlchemy==3.0.3
-greenlet==2.0.2
-idna==3.4
-itsdangerous==2.1.2
-Jinja2==3.1.2
-MarkupSafe==2.1.2
-mysqlclient==2.1.1
-psycopg2==2.9.6
-PyJWT==2.7.0
-python-dotenv==1.0.0
-pytz==2023.3
-requests==2.31.0
-six==1.16.0
-SQLAlchemy==2.0.15
-typing_extensions==4.6.3
-urllib3==2.0.2
-Werkzeug==2.3.4
-paseto-py @ git+https://git.5ht2.me/lmaotrigine/paseto.py@v0.1.0
+--extra-index-url https://5ht2.me/pip
+
+aniso8601==9.0.1 ; python_version >= "3.10" and python_version < "4.0"
+blinker==1.6.2 ; python_version >= "3.10" and python_version < "4.0"
+certifi==2023.5.7 ; python_version >= "3.10" and python_version < "4.0"
+cffi==1.15.1 ; python_version >= "3.10" and python_version < "4.0"
+charset-normalizer==3.1.0 ; python_version >= "3.10" and python_version < "4.0"
+click==8.1.3 ; python_version >= "3.10" and python_version < "4.0"
+colorama==0.4.6 ; python_version >= "3.10" and python_version < "4.0" and platform_system == "Windows"
+cryptography==41.0.1 ; python_version >= "3.10" and python_version < "4.0"
+flask-cors==3.0.10 ; python_version >= "3.10" and python_version < "4.0"
+flask-login==0.6.2 ; python_version >= "3.10" and python_version < "4.0"
+flask-restful==0.3.10 ; python_version >= "3.10" and python_version < "4.0"
+flask-sqlalchemy==3.0.3 ; python_version >= "3.10" and python_version < "4.0"
+flask==2.3.2 ; python_version >= "3.10" and python_version < "4.0"
+greenlet==2.0.2 ; python_version >= "3.10" and python_version < "4.0" and (platform_machine == "win32" or platform_machine == "WIN32" or platform_machine == "AMD64" or platform_machine == "amd64" or platform_machine == "x86_64" or platform_machine == "ppc64le" or platform_machine == "aarch64")
+idna==3.4 ; python_version >= "3.10" and python_version < "4.0"
+itsdangerous==2.1.2 ; python_version >= "3.10" and python_version < "4.0"
+jinja2==3.1.2 ; python_version >= "3.10" and python_version < "4.0"
+markupsafe==2.1.3 ; python_version >= "3.10" and python_version < "4.0"
+paseto-py==0.1.0 ; python_version >= "3.10" and python_version < "4.0"
+psycopg2==2.9.6 ; python_version >= "3.10" and python_version < "4.0"
+pycparser==2.21 ; python_version >= "3.10" and python_version < "4.0"
+pycryptodomex==3.18.0 ; python_version >= "3.10" and python_version < "4.0"
+python-dotenv==1.0.0 ; python_version >= "3.10" and python_version < "4.0"
+pytz==2023.3 ; python_version >= "3.10" and python_version < "4.0"
+requests==2.31.0 ; python_version >= "3.10" and python_version < "4.0"
+six==1.16.0 ; python_version >= "3.10" and python_version < "4.0"
+sqlalchemy==2.0.16 ; python_version >= "3.10" and python_version < "4.0"
+typing-extensions==4.6.3 ; python_version >= "3.10" and python_version < "4.0"
+urllib3==2.0.3 ; python_version >= "3.10" and python_version < "4.0"
+werkzeug==2.3.6 ; python_version >= "3.10" and python_version < "4.0"
